--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@supabase/supabase-js": "^2.50.2",
     "@tanstack/react-query": "^5.56.2",
     "@types/qrcode": "^1.5.5",
+    "@types/uuid": "^10.0.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -67,6 +68,7 @@
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.9.3",
     "vite-plugin-pwa": "^1.0.0",
     "workbox-precaching": "^7.3.0",
