Update payment configuration to enhance security and error handling
- Updated Cash App and Square payment configurations to prevent the use of placeholder values in production.
- Improved error messages to guide users in setting environment variables for Cash App and Square integrations.
- Removed fallback values for applicationId, locationId, and clientId in payment-config.ts to enforce proper configuration.

--- a/.env.production
+++ b/.env.production
@@ -18,6 +18,7 @@ PAYPAL_ENVIRONMENT=production
 # Square Configuration - PRODUCTION
 # CLIENT-SIDE (Safe to expose)
 VITE_SQUARE_APPLICATION_ID=sq0idp-XG8irNWHf98C62-iqOwH6Q
+VITE_SQUARE_LOCATION_ID=L0Q2YC1SPBGD8
 VITE_SQUARE_ENVIRONMENT=production
 
 # SERVER-SIDE ONLY (DO NOT use VITE_ prefix - these are secrets!)
