--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
+    "http-proxy": "^1.18.1",
     "jest": "^30.0.3",
     "jest-environment-jsdom": "^30.0.2",
     "lovable-tagger": "^1.1.7",
