feat: Update Cash App Pay integration to use Square credentials exclusively
- Revised the .env.example and integration guide to clarify that Cash App Pay utilizes Square Application ID and environment settings, eliminating the need for a separate Cash App client ID.
- Refactored SquarePaymentForm and related components to remove references to the Cash App client ID, streamlining the initialization process.
- Enhanced environment validation and logging to reflect the updated configuration, ensuring clarity in the integration process.
- Improved documentation to emphasize the exclusive use of Square's Web Payments SDK for Cash App Pay, aligning with recent SDK updates.

--- a/.env.example
+++ b/.env.example
@@ -27,10 +27,9 @@ SQUARE_ACCESS_TOKEN=EAAAlwLSKasNtDyFEQ4mDkK9Ces5pQ9FQ4_kiolkTnjd-4qHlOx2K9-VrGC7
 SQUARE_LOCATION_ID=L0Q2YC1SPBGD8
 SQUARE_ENVIRONMENT=production
 
-# Cash App Configuration - PRODUCTION (uses Square)
-# CLIENT-SIDE (Safe to expose)
-VITE_CASHAPP_CLIENT_ID=sq0idp-XG8irNWHf98C62-iqOwH6Q
-VITE_CASHAPP_ENVIRONMENT=production
+# Cash App Configuration - PRODUCTION
+# Note: Cash App Pay uses Square credentials - no separate client ID needed
+# Cash App Pay is accessed through Square's Web Payments SDK
 
 # Payment Webhook Configuration - PRODUCTION (Supabase Edge Function)
 VITE_PAYMENT_WEBHOOK_URL=https://aszzhlgwfbijaotfddsh.supabase.co/functions/v1/payments-webhook
