chore: Add production environment variables template and update .gitignore
- Introduced a new .env.production.example file as a template for production environment variables, ensuring sensitive information is not committed to version control.
- Updated .gitignore to include .env.production and other environment files to prevent accidental exposure of credentials.
- Enhanced security practices by providing a clear structure for managing production configurations.

These changes improve the security posture of the codebase by promoting best practices for environment variable management.

--- a/.gitignore
+++ b/.gitignore
@@ -23,11 +23,15 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variables (keep .env.production for reference)
+# Environment variables - NEVER commit these!
 .env
 .env.local
 .env.development
 .env.development.local
 .env.test
 .env.test.local
+.env.production
+.env.production.local
+.env.sandbox
+.env.staging
 
