--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "jest",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "migrate:simple-events": "tsx scripts/migrate-simple-events.ts"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
