--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@tanstack/react-query": "^5.56.2",
     "@types/qrcode": "^1.5.5",
     "@types/uuid": "^10.0.0",
+    "@vercel/speed-insights": "^1.2.0",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
