--- a/package.json
+++ b/package.json
@@ -111,10 +111,13 @@
     "jest-environment-jsdom": "^30.0.2",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
+    "rollup-plugin-visualizer": "^6.0.3",
     "tailwindcss": "^3.4.11",
     "ts-jest": "^29.4.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-imagetools": "^7.1.0",
+    "vite-plugin-compression": "^0.5.1"
   }
 }
